# Inside of setup.cfg
[metadata]
description-file = README.md

[metadata]
author = Brent Barbachem
author_email = barbacbd@dukes.jmu.edu
maintainer = Brent Barbachem
maintainer_email = barbacbd@dukes.jmu.edu
name = cluster
version = 1.0.0
description = The enviornmental/local climate change modeler
long_description = file: README.md
long_description_content_type = text/markdown
keywords = environment, cluster, crit, climate
license = MIT
license_files = file: LICENSE
classifiers =
    Programming Language :: Python :: 3
url = https://github.com/barbacbd/cluster

[options]
zip_safe = False
include_package_data = True
packages = find: 
install_requires =
    sklearn
    pandas
    numpy
    rpy2
    scipy
    kmeans1d
    jenkspy
    pyyaml
    inquirer
tests_require =
    pytest
    coverage
    pytest-cov
    mock
    pylint
python_requires = >=3.7, <4

[options.package_data]
* = *.yaml

[options.packages.find]
exclude =
    tests*
    user*
    refs*
    docker*
    R*
