[metadata]
author = Brent Barbachem
author_email = barbacbd@dukes.jmu.edu
maintainer = Brent Barbachem
maintainer_email = barbacbd@dukes.jmu.edu
name = predictor
version = 1.0.0
description = The enviornmental/local climate change modeler
long_description = file: README.md
long_description_content_type = text/markdown
keywords = environment, cluster, crit, climate, predict
license = MIT
license_files = file: LICENSE
classifiers =
    Programming Language :: Python :: 3
url = https://github.com/barbacbd/predictor

[options]
zip_safe = False
include_package_data = True
packages = find: 
install_requires =
    sklearn
    pandas
    numpy
    rpy2
    scipy
    kmeans1d
    jenkspy
    pyyaml
    inquirer
    xlsxwriter
    xlrd
    openpyxl
tests_require =
    pytest
    coverage
    pytest-cov
    mock
    pylint
python_requires = >=3.7, <4

[options.package_data]
* = *.yaml

[options.packages.find]
exclude =
    tests*
    user*
    refs*
    docker*
    R*

[options.entry_points]
console_scripts = 
    predictor = predictor.__main__:main
